# Maps

./: .gitignore  AGENTS.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts
apps/api/src/: orchestrator.test.ts  orchestrator.ts  provider-config.test.ts  provider-config.ts  service.test.ts  service.ts
apps/backend/app/: ai_layer.py  amap_mcp.py  compliance.py  main.py  map_service.py  nl2sql.py  provider_config.py  scenario_data.py  schemas.py  service.py  voice_layer.py
apps/backend/tests/: test_backend.py  test_map_service.py
apps/web/: index.html
apps/web/src/: App.tsx  api-client.test.ts  api-client.ts  app.test.tsx  styles.css
docs/api/: provider-configuration.md  server-deployment.md
docs/architecture/: frontend-page-split-plan.md  initial-bootstrap-plan.md  manual-qa-checklist.md  recommended-stack.md  server-deployment-plan.md  web-style-refresh-plan.md
infra/scripts/: deploy.py  deploy.sh  uninstall.py  uninstall.sh
tests/e2e/: app.pw.ts
