[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maps-backend"
version = "0.1.0"
description = "Python backend for the China-compliant voice-driven map presentation assistant"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "litellm>=1.82.6",
  "pydantic>=2.11.7",
  "pydantic-ai>=1.70.0",
  "uvicorn>=0.35.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["apps/backend/tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*"]
